# mutants3

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .vale.ini  CHANGELOG.md  MONSTERS_READINESS_20251010-1741.md  Makefile  README.md  RUNTIME_MANIFEST.md  Run-Mutants.ps1  mkdocs.yml  pyproject.toml  pytest.ini  quick_look.txt  rawlinks.txt  run1_cmds.txt  run1_output.txt  run2_output.txt  run3_output.txt  run4_output.txt  run5_output.txt  stat_output.txt  stat_output2.txt  stat_output3.txt  stat_output4.txt  temp_cmds.txt  temp_cmds_run.txt  tmp_snip.txt
.devcontainer/: devcontainer.json
debuginfo/: audiodevgame.txt  audiodevgame2.txt  audioreference.txt  bugreport1.txt  bugreport11.txt  bugreport12.txt  bugreport13.txt  bugreport14.txt  bugreport15.txt  bugreport16.txt  bugreport17.txt  bugreport18.txt  bugreport2.txt  bugreport3.txt  bugreport4.txt  bugreport5.txt  bugreport6.txt  devaitesting.txt  devaitesting2.txt  devaitesting3.txt  devaitesting4.txt  devaitesting5.txt  devaitesting6.txt  devaitesting7.txt  devaitesting8.txt  fleeref.txt  fleereference.txt  footsteps_gone.txt  footsteps_travel_order.txt  game_capture.txt  gamelog1.txt  gamelog10.txt  gamelog11.txt  gamelog12.txt  gamelog13.txt  gamelog14.txt  gamelog15.txt  gamelog2.txt  gamelog3.txt  gamelog4.txt  (+21 more)
docs/: AC forumla  ARCHITECTURE.md  LOGGING.md  MENUS.md  SAVES.md  STATE.md  Sources_of_truth.md  architecture_dense.md  architecture_overview.md  changelog.md  chatgpt_header_long.md  chatgpt_header_short.md  ci_checks.md  colors  combat_system_notes.md  combat_tuning.md  command sequence.md  commands.md  contributing.md  current_game.txt  daily_litter_spawns.md  deep_dive.md  how_to_change_colors.md  index.md  issues1.md  items.md  logging_and_tracing.md  monster_ai_spec.md  quickstart.md  state.md  tests_overview.md  ui_invariants.md  utilities.md
scenarios/: binding_persists_across_travel.json  convert_guid_immediate.json  convert_guid_regression.json  convert_removes_item.json  cross_year_monster_leak.json  item_label_no_guid.json  kill_block.json  monster_binding_cleared_on_menu_exit.json  monster_persists_class_switch.json  shadows_adjacent_flee.json  shadows_adjacent_flee_farther.json  shadows_basic.json  shadows_collocated_flee.json  shadows_peek_no_shadows.json  target_cleared_on_exit.json  wield_ready_preserved.json
scripts/: expand_item_power_fields.py  guard_wrap.py  import_monsters.py  migrate_spawn_flags.py  monsters_import.py  monsters_initial_spawn.py
src/: __init__.py
state/: catalog.json  mutants.db-shm  mutants.db-wal  playerlivestate.json  playerlivestate.json.bad
(+526 files in other folders)
