[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutants"
version = "0.0.0"
description = "Skeleton for Mutants (no game code)"
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
homepage = "https://github.com/your-org-or-user/your-repo"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
  "mutants",
  "mutants.io",
  "mutants.handlers",
  "mutants.registries",
  "mutants.services",
  "mutants.combat",
  "mutants.players",
  "mutants.data",
  "mutants.schemas",
  "mutants.ui",
  "mutants.commands",
]

[tool.interrogate]
fail-under = 95
exclude = ["docs", "scripts"]
ignore-init-method = true
ignore-init-module = true
verbose = 1
whitelist-regex = [
    "src/mutants/state.py",
    "src/mutants/registries/items_.*\\.py",
    "src/mutants/services/(damage_engine|combat_loot)\\.py",
    "src/mutants/services/combat_actions.py",
]

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D105", "D107"]
